--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -16,5 +15,6 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3"
-  }
+  },
+  "description": ""
 }
